# game-map-render

./: .gitignore  README.md  claude_chat.txt  debug_blend.py  debug_infill.py  debug_inpaint.py  debug_inpaint2.py  debug_mirror.py  debug_tiles.py  gamemap  generate_controlnet.py  generate_from_tilemap.py  generate_scene.py  generate_tiles.py  generate_tiles_simple.py  pyproject.toml  requirements.txt  step1_basic_sdxl.py  step2_attention_maps.py  step3_latent_blend.py  step3_modify_attention.py  step3_regional_prompts.py  test_simple.py  test_single_tile.py
docs/plans/: regional-prompt-attention.md
examples/: beach.json  dungeon.json  forest.json
src/: __init__.py  config.py  main.py  tilemap.py  types.py
src/generation/: __init__.py  controlnet_pipeline.py  pipeline.py  prompts.py  reference.py  segmentation.py  tile_gen.py
src/render/: __init__.py  compositor.py  output.py
